--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 
     <div class="container"> 
 
-        <h1>Dice</h1> 
+        <h1>The Dice Game</h1> 
 
   
 
         <div class="dice"> 
 
-            <p class="P1">Player Name</p> 
+            <p class="P1">Player 1</p> 
 
             <img class="img1" src="dice6.png"> 
 
@@ -138,7 +138,7 @@
 
         <div class="dice"> 
 
-            <p class="P2">Player Name</p> 
+            <p class="P2">Player 2</p> 
 
             <img class="img2" src="dice6.png"> 
 
@@ -154,7 +154,7 @@
 
             onClick="rollDice()"> 
 
-            Roll 
+            Play
 
         </button> 
 
